--- a/Klike/Interfaces/CardCell.xib
+++ b/Klike/Interfaces/CardCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
@@ -8,13 +8,13 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="CardCell" id="cvH-kA-QrX" customClass="KLCardCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="87"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cvH-kA-QrX" id="vi9-Jb-gm9">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3yY-wA-39D">
-                        <rect key="frame" x="16" y="1" width="288" height="79.5"/>
+                        <rect key="frame" x="16" y="0.0" width="288" height="78.5"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Visa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TIO-Ze-zKv">
                                 <rect key="frame" x="16" y="20" width="30" height="19"/>
@@ -41,8 +41,8 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="3yY-wA-39D" firstAttribute="leading" secondItem="vi9-Jb-gm9" secondAttribute="leading" constant="16" id="7F8-uP-J13"/>
-                    <constraint firstItem="3yY-wA-39D" firstAttribute="top" secondItem="vi9-Jb-gm9" secondAttribute="top" constant="1" id="fv6-2B-aTx"/>
-                    <constraint firstAttribute="bottom" secondItem="3yY-wA-39D" secondAttribute="bottom" constant="3" id="ygB-0M-Os1"/>
+                    <constraint firstItem="3yY-wA-39D" firstAttribute="top" secondItem="vi9-Jb-gm9" secondAttribute="top" id="fv6-2B-aTx"/>
+                    <constraint firstAttribute="bottom" secondItem="3yY-wA-39D" secondAttribute="bottom" constant="8" id="ygB-0M-Os1"/>
                     <constraint firstAttribute="trailing" secondItem="3yY-wA-39D" secondAttribute="trailing" constant="16" id="zfx-1b-bYI"/>
                 </constraints>
             </tableViewCellContentView>
@@ -51,7 +51,7 @@
                 <outlet property="cardNameLabel" destination="TIO-Ze-zKv" id="1qf-o1-vtA"/>
                 <outlet property="cardNumberLabel" destination="L6d-1L-fxH" id="zh1-pP-qQ3"/>
             </connections>
-            <point key="canvasLocation" x="462" y="276"/>
+            <point key="canvasLocation" x="341" y="242"/>
         </tableViewCell>
     </objects>
 </document>
