--- a/Klike/Sources/Controllers/PushSettings/KLPushSettingsViewController.xib
+++ b/Klike/Sources/Controllers/PushSettings/KLPushSettingsViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KLPushSettingsViewController">
@@ -16,7 +16,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="56" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ohV-fv-hr9">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <rect key="frame" x="0.0" y="44" width="600" height="556"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="wLp-pV-xBF"/>
@@ -27,7 +27,7 @@
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="ohV-fv-hr9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="EA7-9D-YHv"/>
-                <constraint firstItem="ohV-fv-hr9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="aWU-rX-jhw"/>
+                <constraint firstItem="ohV-fv-hr9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="44" id="aWU-rX-jhw"/>
                 <constraint firstAttribute="trailing" secondItem="ohV-fv-hr9" secondAttribute="trailing" id="bqg-N1-BE9"/>
                 <constraint firstAttribute="bottom" secondItem="ohV-fv-hr9" secondAttribute="bottom" id="y0d-3L-xdb"/>
             </constraints>
